@@ -2,3 +2,7 @@ Version 0.0.1:
 1/ Ported the mod into a new repository.
 2/ Fixes all the error caused by the port.
 3/ Removal of SynergyModProjectile due to unnecessary implementation
+4/ Removal of orb of arcane master and instead make it a perk and renamed it Arcane master
+5/ Merged Glass Cannon accessory with Glass Cannon perk
+6/ Disabled perk artifact upgrade from ever being accessible unless using debug item
+7/ Enhanced Magic staff weapon upgrade are now part of roguelike overhaul (again) 
